blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-blue-ingress
  namespace: canary-bg-switch
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "80"
spec:
  ingressClassName: nginx
  rules:
    - host: "canary.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blue-bg-switch-service
                port:
                  number: 80
