green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-green-ingress
  namespace: canary-bg-switch
spec:
  ingressClassName: nginx
  rules:
    - host: "canary.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: green-bg-switch-service
                port:
                  number: 80
